--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
     "alwaysStrict": true,
+    "declaration": true,
     "esModuleInterop": true,
     "jsx": "react",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "commonjs",
+    "noResolve": false,
+    "outDir": "dist",
     "preserveConstEnums": true,
     "sourceMap": true,
     "strict": true,
     "strictBuiltinIteratorReturn": true,
-    "target": "ESNext",
-    "outDir": "dist",
-    "declaration": true,
-    "noResolve": false
+    "target": "ESNext"
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*.test.ts"]
